# connecdoku

./: .dev.vars.example  .gitignore  AI_AUTOMATION_PROMPT.md  API_BENCHMARK.md  Makefile  README.me  TERMINAL_API.md  add_bands_tags.js  add_chinese_people.js  add_gavrilo_princip.js  add_trio_bands.js  add_word_patterns.js  ai_curator.js  analyze_categories.py  analyze_thin_categories.js  archive.html  audit_fire_decades.js  benchmark-run.html  benchmark.html  categories_list.json  categories_list.txt  check_disney_release_order.cjs  check_future_puzzles.js  check_movie_time_tags.js  check_release_order_tags.cjs  check_release_order_tags.js  check_series_order_candidates.cjs  clean_db.js  clean_db_parallel.js  clean_db_worker.js  connecdoku_matrix_solver.js  connecdoku_matrix_solver_sqlite.js  contact.html  convert_puzzles_for_frontend.js  curator_output.md  curator_state.json  delete_low_quality_future_puzzles.js  delete_old_hash_puzzles.js  extract_words_and_categories.js  find_incomplete_conflicts.js  (+56 more)
daily_puzzles/: puzzles.json
data/: api_benchmark_models.json  categories.json  categories_missing_from_daily_puzzles.json  category_emojis.json  category_scores.json  category_tally.json  cursor_benchmark_models.json  meta_categories.json  thin_categories.json  words.json
migrations/: 0001_competition.sql  0002_competition_solved_detail.sql  0003_competition_attempts.sql  0004_competition_benchmark_runs.sql
progress/: 638dd3b7a3cf88256679531876b2bd220790f9b2e8a245bcc5763fa5ab08ca4e_0.json  (+5 more)
rust_helper/: Cargo.toml
rust_helper/src/: main.rs
(+13 files in other folders)
