[package]
name = "cdx_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31" }
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "cdx_worker"
path = "src/bin/cdx_worker.rs"

[[bin]]
name = "cdx_cleaner"
path = "src/bin/cdx_cleaner.rs"

[[bin]]
name = "cdx_writer"
path = "src/bin/cdx_writer.rs"


